# InfoMoisil

./: README.md  database.sql
Judge/: .gitignore  CMakeLists.txt
Judge/cmake/: FindMySQLConnectorCPP.cmake
Judge/evaluator/: CMakeLists.txt
Judge/evaluator/src/: Config.cpp  Config.h  File.cpp  File.h  Job.cpp  Job.h  Main.cpp  User.cpp  User.h  Utils.cpp  Utils.h  Version.h
Website/: index.php
Website/ajax/: get_notifications.php  read_notification.php
Website/css/: style.css
Website/include/: config.php  config.sample.php  const.php  file.class.php  functions.php  homework.class.php  permissions.class.php  problem.class.php  studentclass.class.php  user.class.php
Website/js/: init.js  notifications.js
Website/scripts/: class.php  joinclass.php  newclass.php  newproblem.php  problem.php  register.php  viewproblems.php
Website/scripts/account/: class.php  default.php  settings.php
Website/templates/: account.twig  article.twig  class.twig  error.twig  home.twig  index.twig  joinclass.twig  newclass.twig  newproblem.twig  problem.twig  register.twig  sidebar.twig  viewproblems.twig
Website/templates/account/: class.twig  default.twig  main.twig  settings.twig
Website/templates/class/: default.twig  homework.twig  members.twig  newhomework.twig  viewhomeworks.twig
Website/templates/class/snippets/: header.twig
Website/templates/problem/: answers.twig  default.twig  edit.twig  myanswers.twig  sendsolution.twig  viewsolution.twig  viewtest.twig
Website/templates/problem/snippets/: solutionform.twig  summary.twig
